Set JVM arguments for `demo.simple` and `demo.complex` modules, update main class in `demo.complex`