@@ -26,5 +26,18 @@ dependencies {
 }
 
 application {
-    mainClass.set("com.spinyowl.spinygui.demo.complex.Main")
+    mainClass.set("com.spinyowl.spinygui.demo.complex.NvgExample")
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/sun.misc=ALL-UNNAMED",
+        "--add-opens", "com.spinyowl.cbchain/com.spinyowl.cbchain=org.lwjgl",
+        "--add-reads", "org.lwjgl=com.spinyowl.cbchain", "--enable-native-access=ALL-UNNAMED"
+    )
+}
+
+tasks.named<JavaExec>("run") {
+    jvmArgs = listOf(
+        "--add-opens", "java.base/sun.misc=ALL-UNNAMED",
+        "--add-opens", "com.spinyowl.cbchain/com.spinyowl.cbchain=org.lwjgl",
+        "--add-reads", "org.lwjgl=com.spinyowl.cbchain"
+    )
 }
